--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^6.0.0",
     "config": "^3.3.6",
     "create-react-app": "^4.0.3",
+    "crypto-random-string": "^3.3.1",
     "express": "^4.17.1",
     "mongoose": "^5.12.0"
   },
